--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       position: relative;
     }
 
-    /* Overlay for readability */
     .overlay {
       position: absolute;
       top: 0; left: 0;
@@ -71,7 +70,6 @@
       color: rgba(255,255,255,0.8);
     }
 
-    /* Animations */
     @keyframes fadeSlideIn {
       to {
         opacity: 1;
@@ -83,6 +81,31 @@
       to {
         opacity: 1;
         transform: translateY(0);
+      }
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 3em;
+      }
+      p {
+        font-size: 1.1em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2.2em;
+      }
+      p {
+        font-size: 1em;
+      }
+      .content {
+        padding: 15px;
+      }
+      footer {
+        font-size: 0.8em;
       }
     }
   </style>
